--- a/README
+++ b/README
@@ -1,6 +1,7 @@
     AIX::ODM - A Perl module for retrieving IBM AIX ODM information
 
 SYNOPSIS
+
       use AIX::ODM;
   
       my %odm = odm_dump('C|P');
@@ -31,8 +32,12 @@ DESCRIPTION
     It makes available several functions, which return hashes of values
     containing device information and their attributes.
 
+    The syntax examples shown above as 'C|P' should be read as
+    "C" OR "P", meaning the argument should consist of a single
+    quoted letter "C" or "P", but NOT both.
+
 VERSION
-    1.0 (released 2004-06-30)
+    1.0.2 (released 2004-09-15)
 
 BUGS
     No bugs are known at this time.
